# JardasBot

./: DBcreate.py  Dockerfile  README.md  bot.py  bot_commands.py  pyproject.toml  testcode.py
commands/: dev_commands.py  handle_bot_commands.py  special_commands.py
database/: DBhelpers.py
methods/: auth_handler.py  command_handle.py  command_special_handlers.py  custom_handlers.py  logging_handlers.py  response_handle.py  schedule_events_handler.py
methods_cmd/: dev_handlers.py
responses/: Custom.py  Fortunes.py
