[project]
name = ""
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
